kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: your-namespace-name
  labels:
    environment: dev # Optional label to categorize the namespace, e.g., dev, prod, staging
